update: opensaml to latest SVN version
git-svn-id: svn+ssh://buildserver.lin-k.net/scm/svn/products/safe-online/trunk@665 cd7dd898-ab41-4057-98bc-1513970a52e4